fixing scrollbar

--- a/app/app.component.css
+++ b/app/app.component.css
@@ -6,27 +6,29 @@ html {
     padding: 0;
     
 }
-.dropdown-menu::-webkit-scrollbar-track
+::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
 	border-radius: 10px;
 }
 
-.dropdown-menu::-webkit-scrollbar
+::-webkit-scrollbar
 {
 	width: 10px;
 	background-color: #F5F5F5;
 }
 
-.dropdown-menu::-webkit-scrollbar-thumb
+::-webkit-scrollbar-thumb
 {
-	border-radius: 10px;
-	background-color: #D62929;
-	background-image: -webkit-linear-gradient(90deg,
-											  transparent,
-											  rgba(0, 0, 0, 0.4) 50%,
-											  transparent,
+	background-color: #F90;	
+	background-image: -webkit-linear-gradient(45deg,
+	                                          rgba(255, 255, 255, .2) 25%,
+											  transparent 25%,
+											  transparent 50%,
+											  rgba(255, 255, 255, .2) 50%,
+											  rgba(255, 255, 255, .2) 75%,
+											  transparent 75%,
 											  transparent)
 }
 body {
